Fix websites on IE

--- a/style.css
+++ b/style.css
@@ -386,8 +386,8 @@ hr {
 .website-gallery {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .website {
@@ -398,6 +398,8 @@ hr {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 64px;
+  padding: 0;
+  height: 100%;
 }
 
 .website:nth-child(even) {
@@ -417,7 +419,8 @@ hr {
   justify-content: flex-start;
   height: 100%;
   width: 45%;
-  padding: 2.5%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
 }
 
 @media (max-width: 750px)  {
@@ -431,6 +434,7 @@ hr {
 
   .website img {
     width: 100%;
+    height: 100%;
     padding: 0;
   }
 
@@ -448,6 +452,10 @@ hr {
   width: 100%;
 }
 
+.website-details p {
+  width: 100%;
+}
+
 .website-details .caption {
   text-align: center;
   width: 100%;
@@ -458,6 +466,8 @@ hr {
 .website-details hr {
   width: 80%;
   border-color: white;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .website-details h2 {
